kubernetes/yaml/production/api-daemon/api-daemon.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-daemon
  name: svc-api-daemon
  namespace: production
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: api-daemon
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-api-daemon
  namespace: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: addr-api-daemon
    networking.gke.io/managed-certificates: cert-api-daemon
spec:
  backend:
    serviceName: svc-api-daemon
    servicePort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-daemon
  name: api-daemon
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-daemon
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-daemon
        api-redis-client: "true"
        api-postgres-client: "true"
    spec:
      containers:
        - image: gcr.io/feeld-daveio/api-daemon:pre-2
          name: api-daemon
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
